<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <artifactId>javalin-api</artifactId>

    <build>
        <finalName>app</finalName>
        <plugins>
            <plugin>
                <artifactId>maven-shade-plugin</artifactId>
                <configuration>
                    <filters>
                        <filter> <!-- This filter is needed to avoid a bug in the shade plugin -->
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>module-info.class</exclude>
                                <exclude>META-INF/MANIFEST.MF</exclude>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <transformers>
                        <transformer
                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>com.iskaypet.Main
                            </mainClass> <!-- Here you should put the main class of your application -->
                        </transformer>
                    </transformers>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
                <groupId>org.apache.maven.plugins</groupId>
                <version>3.6.1</version>
            </plugin>
            <plugin>
                <artifactId>jacoco-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <configuration>
                            <excludes>
                                <exclude>**/*opentelemetry*.jar</exclude>
                                <exclude>**/META-INF/**</exclude>
                                <exclude>**/*$*</exclude>
                            </excludes>
                        </configuration>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <id>report</id>
                        <phase>test</phase>
                    </execution>
                </executions>
                <groupId>org.jacoco</groupId>
                <version>0.8.14</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <annotationProcessorPaths>
                        <annotationProcessorPath>
                            <groupId>io.javalin.community.openapi</groupId>
                            <artifactId>openapi-annotation-processor</artifactId>
                            <version>${javalin.openapi.version}</version>
                        </annotationProcessorPath>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>properties</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar} -XX:+EnableDynamicAgentLoading
                        -Xshare:off
                    </argLine>
                </configuration>
                <version>3.5.4</version>
            </plugin>

        </plugins>
    </build>
    <dependencies>
        <!-- Main Dependencies -->
        <dependency>
            <artifactId>javalin</artifactId>
            <groupId>io.javalin</groupId>
            <version>${javalin.version}</version>
        </dependency>
        <dependency>
            <artifactId>guice</artifactId>
            <groupId>com.google.inject</groupId>
            <version>7.0.0</version>
        </dependency>
        <dependency>
            <artifactId>rxjava</artifactId>
            <groupId>io.reactivex.rxjava3</groupId>
            <version>3.1.12</version>
        </dependency>
        <dependency>
            <artifactId>gson</artifactId>
            <groupId>com.google.code.gson</groupId>
            <version>2.13.2</version>
        </dependency>

        <!-- Testing Dependencies -->
        <dependency>
            <artifactId>junit-jupiter</artifactId>
            <groupId>org.junit.jupiter</groupId>
            <scope>test</scope>
            <version>6.0.0</version>
        </dependency>
        <dependency>
            <artifactId>mockito-core</artifactId>
            <groupId>org.mockito</groupId>
            <scope>test</scope>
            <version>5.20.0</version>
        </dependency>
        <dependency>
            <artifactId>mockito-junit-jupiter</artifactId>
            <groupId>org.mockito</groupId>
            <scope>test</scope>
            <version>5.20.0</version>
        </dependency>
        <dependency>
            <artifactId>assertj-core</artifactId>
            <groupId>org.assertj</groupId>
            <scope>test</scope>
            <version>3.27.6</version>
        </dependency>
        <dependency>
            <artifactId>logback-classic</artifactId>
            <groupId>ch.qos.logback</groupId>
            <version>1.5.19</version>
        </dependency>
        <dependency>
            <artifactId>logstash-logback-encoder</artifactId>
            <groupId>net.logstash.logback</groupId>
            <version>8.1</version>
        </dependency>
        <dependency>
            <artifactId>javalin-micrometer</artifactId>
            <groupId>io.javalin</groupId>
            <version>6.7.0</version>
        </dependency>
        <dependency>
            <artifactId>micrometer-registry-prometheus</artifactId>
            <groupId>io.micrometer</groupId>
            <version>1.15.4</version>
        </dependency>
        <dependency>
            <artifactId>jackson-core</artifactId>
            <groupId>com.fasterxml.jackson.core</groupId>
            <version>2.20.0</version>
        </dependency>
        <dependency>
            <artifactId>jackson-databind</artifactId>
            <groupId>com.fasterxml.jackson.core</groupId>
            <version>2.20.0</version>
        </dependency>
        <dependency>
            <artifactId>jackson-annotations</artifactId>
            <groupId>com.fasterxml.jackson.core</groupId>
            <version>2.20</version>
        </dependency>
        <dependency>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <version>2.20.0</version>
        </dependency>
        <dependency>
            <artifactId>jackson-datatype-jdk8</artifactId>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <version>2.20.0</version>
        </dependency>
        <dependency>
            <artifactId>jackson-module-parameter-names</artifactId>
            <groupId>com.fasterxml.jackson.module</groupId>
            <version>2.20.0</version>
        </dependency>
        <dependency>
            <artifactId>mockwebserver</artifactId>
            <groupId>com.squareup.okhttp3</groupId>
            <scope>test</scope>
            <version>5.2.1</version>
        </dependency>
        <!-- OpenApi plugin -->
        <dependency>
            <groupId>io.javalin.community.openapi</groupId>
            <artifactId>javalin-openapi-plugin</artifactId>
            <version>${javalin.openapi.version}</version>
        </dependency>
        <!-- Swagger plugin -->
        <dependency>
            <groupId>io.javalin.community.openapi</groupId>
            <artifactId>javalin-swagger-plugin</artifactId>
            <version>${javalin.openapi.version}</version>
        </dependency>
        <!-- ReDoc plugin -->
        <dependency>
            <groupId>io.javalin.community.openapi</groupId>
            <artifactId>javalin-redoc-plugin</artifactId>
            <version>${javalin.openapi.version}</version>
        </dependency>
    </dependencies>
    <groupId>com.iskaypet</groupId>

    <modelVersion>4.0.0</modelVersion>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javalin.version>6.7.0</javalin.version>
        <javalin.openapi.version>6.7.0-2</javalin.openapi.version>
    </properties>

    <repositories>
        <repository>
            <id>reposilite-repository</id>
            <url>https://maven.reposilite.com/snapshots</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <version>1.0-SNAPSHOT</version>
</project>
